# blocker-fraud-company

./: Makefile  README.md  pyproject.toml  requirements-app.txt
app/: streamlit_app.py  telegram_bot.py
configs/: project.toml
data/raw/: README.md
docs/: deployment.md
notebooks/: 00_business_understanding.ipynb  01_data_understanding.ipynb  02_exploratory_analysis.ipynb  03_feature_engineering.ipynb  04_modeling_and_business_results.ipynb  05_deployment_and_consumption.ipynb  README.md
src/blocker_fraud_company/: __init__.py  api.py  cli.py  data.py  features.py  models.py
