[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blocker-fraud-company"
version = "0.1.0"
description = "Blocker Fraud Company Kaggle portfolio workflow"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
